force-app/main/default/objects/VDT_Vault_Document_Status_Map__mdt/VDT_Vault_Document_Status_Map__mdt.object-meta.xml
<CustomObject>
    <label>VDT Vault Document Status Map</label>
    <pluralLabel>VDT Vault Document Status Maps</pluralLabel>
</CustomObject>