force-app/main/default/objects/VDT_Vault_Document_Status_Map__mdt/fields/Document_Status__c.field-meta.xml
<CustomField>
    <fullName>Document_Status__c</fullName>
    <label>Document Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>