force-app/main/default/objects/VDT_Vault_Document_Status_Map__mdt/fields/Vault_Status__c.field-meta.xml
<CustomField>
    <fullName>Vault_Status__c</fullName>
    <label>Vault Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>